--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghii/package-json-loader",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A Funny package json loader for ghii configuration manager ",
   "maintainers": [
     {
@@ -33,7 +33,7 @@
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
@@ -67,29 +67,29 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/js-yaml": "^3.12.5",
+    "@types/jest": "^27.0.1",
+    "@types/js-yaml": "^4.0.2",
     "@types/lodash.set": "^4.3.6",
-    "@types/node": "^14.14.6",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "coveralls": "^3.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.6.3",
-    "jest-config": "^26.6.3",
-    "prettier": "^2.1.2",
+    "@types/node": "^16.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
+    "jest-config": "^27.0.6",
+    "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.3",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.0.5"
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.0",
+    "typedoc": "^0.21.5",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@ghii/ghii": "0.0.1",
     "lodash.set": "^4.3.2",
-    "type-fest": "^0.8.1"
+    "type-fest": "^2.0.0"
   }
 }
