--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ghii/package-json-loader",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A Funny package json loader for ghii configuration manager ",
   "maintainers": [
     {
@@ -67,29 +67,29 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/js-yaml": "^4.0.2",
-    "@types/lodash.set": "^4.3.6",
-    "@types/node": "^16.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@ghii/ghii": "^1.0.0",
+    "@types/jest": "^29.2.3",
+    "@types/js-yaml": "^4.0.5",
+    "@types/lodash.set": "^4.3.7",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^27.0.6",
-    "jest-config": "^27.0.6",
-    "prettier": "^2.3.2",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "jest-config": "^29.3.1",
+    "prettier": "^2.8.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.0",
-    "typedoc": "^0.21.5",
-    "typescript": "^4.3.5"
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "type-fest": "^3.3.0",
+    "typedoc": "^0.23.21",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@ghii/ghii": "0.0.1",
-    "lodash.set": "^4.3.2",
-    "type-fest": "^2.0.0"
+    "lodash.set": "^4.3.2"
   }
 }
